# hackathon_26_drt_data_processing

./: README.md
LifecycleCostBalancedBusOperations/: README.md
LifecycleCostBalancedBusOperations/LifecycleCostBalancedBusOperations/: ContentView.swift  LifecycleCostBalancedBusOperationsApp.swift  drt_fleet.db
LifecycleCostBalancedBusOperations/LifecycleCostBalancedBusOperations.xcodeproj/: project.pbxproj
LifecycleCostBalancedBusOperations/LifecycleCostBalancedBusOperations.xcodeproj/project.xcworkspace/xcuserdata/samermoussa.xcuserdatad/: UserInterfaceState.xcuserstate
LifecycleCostBalancedBusOperations/LifecycleCostBalancedBusOperations.xcodeproj/xcuserdata/samermoussa.xcuserdatad/xcschemes/: xcschememanagement.plist
LifecycleCostBalancedBusOperations/LifecycleCostBalancedBusOperations/Database/: DatabaseManager.swift
LifecycleCostBalancedBusOperations/LifecycleCostBalancedBusOperations/Models/: Bus.swift  Route.swift  SwapRecommendation.swift
LifecycleCostBalancedBusOperations/LifecycleCostBalancedBusOperations/Views/: FleetHealthView.swift  PresentationView.swift  RouteStressView.swift  SwapEngineView.swift
dataset_processing/: README.md  build_db.py  drt_fleet copy.db  main.py  pyproject.toml
